remove hardcoded pass and remove branch target to main